# python-libraries

./: Pipfile  readme.md  spike_test.py
.github/workflows/: build-pygo-jwt.yaml  build-pygo-jwt.yml  build-pygo-tools.yaml
docs/: readme.md
example/: Dockerfile  config.json  docker-compose.yaml  setup.py  test.py
examples/pygo-tools/_hello/docker/layer/: Dockerfile  build-external.sh  build-internal.sh  docker-compose.yaml  wheel
examples/pygo-tools/_hello/docker/wheel/: build.sh  docker-build.sh  docker-compose.yaml
examples/pygo-tools/_hello/example/: __init__.py  lib
examples/pygo-tools/_hello/example/go/: Makefile  main.go
examples/pygo-tools/hello-v1/: MANIFEST.in  Makefile  docker-build.sh  example  setup.py
examples/pygo-tools/hello-v1/docker/layer/: Dockerfile  build-internal.sh  docker-compose.yaml
examples/pygo-tools/hello-v1/docker/wheel/: Dockerfile  build.sh  docker-build.sh  docker-compose.yaml
examples/pygo-tools/hello-v2/: Makefile  docker-compose.yaml  pyproject.toml  test.py
examples/pygo-tools/hello-v2/docker/layer/: build-external.sh
examples/pygo-tools/hello-v2/docker/wheel/: Dockerfile
examples/pygo-tools/hello-v3/: MANIFEST.in  Makefile  pyproject.toml  test.py
examples/pygo-tools/hello-v3/example/: lib
examples/pygo-tools/hello-v3/example/go/: Makefile  core.go  go.mod  wrapper.go
examples/pygo-tools/pygo-tools-example-v2/: notes.md
examples/pygo-tools/pygo-tools-example-v2/example/: __init__.py
fastapi-mongodb/: Pipfile  pyproject.toml
fastapi-mongodb-example/: Pipfile  lambda_function.py  server.py
fastapi-mongodb-example/api/: config.py
fastapi-mongodb-example/api/routes/: debug.py
fastapi-mongodb/fastapi_mongodb/: document.py  router.py
fastapi-mongodb/fastapi_mongodb/util/: __init__.py  schema_util.py
fastapi-mongodb/fastapi_tbd/schema/: crud.py
fastapi-mongodb/fastapi_tbd/util/: httpx_util.py
fastapi-tools/: Makefile  Pipfile  pyproject.toml  readme.md
fastapi-tools/docs/: todo.md
fastapi-tools/docs/examples/: access-control.md
fastapi-tools/fastapi_tbd/: metrics.py
fastapi-tools/fastapi_tbd/data/: mutable.py
fastapi-tools/fastapi_tools/: __init__.py  metrics.py  router.py
fastapi-tools/fastapi_tools/auth/: adapter.py
fastapi-tools/fastapi_tools/auth/_core/: __init__.py  adapter.py  bearer.py  types.py
fastapi-tools/fastapi_tools/auth/auth0/: __init__.py  adapter.py  bearer.py  token.py  x.py  y.py
fastapi-tools/fastapi_tools/auth/cognito/: __init__.py  bearer.py  token.py
fastapi-tools/fastapi_tools/auth/okta/: __init__.py  bearer.py  token.py
fastapi-tools/fastapi_tools/depends/: __init__.py  access.py  query.py  state.py
fastapi-tools/fastapi_tools/mongo/: __init__.py  adapter.py  client.py  depends.py  document.py  mongo.py  object_id.py
fastapi-tools/fastapi_tools/schema/: __init__.py  types.py  util.py
fastapi-tools/fastapi_tools/util/: __init__.py  jwt_util.py
generic-fastapi/: Pipfile  lambda_function.py  local-dev.env.dist  local.env.dist  readme.md  server.py
generic-fastapi/api/: config.py  depends.py  factory.py  router.py  util.py
generic-fastapi/api/model/: generic_data.py  user.py
generic-fastapi/api/routes/: debug.py  generic_data.py  generic_shared_data.py  profile.py
generic-fastapi/api/routes/admin/: generic_shared_data.py  router.py
generic-fastapi/api/schema/: generic_data.py  user.py
generic-fastapi/lambda_layer/: Dockerfile  Pipfile  docker-compose.yaml
generic-fastapi/scripts/: setup-venv.sh
jwt-util/: Makefile  config.json  manifest.in  readme.md  setup.py  setup_util.py  test.py
jwt-util/jwt_util/: __init__.py  jwt_util.py  time_util.py  wrapper.py
jwt-util/jwt_util.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
jwt-util/jwt_util/go/: Makefile  core.go  go.mod  go.sum  main.go  main_example.go  main_test.go  misc.go  util.go  wrapper.go
jwt-util/jwt_util/go/core/: conversions.go  factory.go  misc.go  private_factory.go  public_factory.go  sign_verify.go  util.go
jwt-util/jwt_util/go/util/: b64_util.go  hash_util.go  json_util.go  str_util.go  type_alias.go
jwt-util/jwt_util/go/x/: core.go  misc.go  util.go
pydantic-mql/: LICENSE  Pipfile  readme.md  setup.py
pydantic-mql/pydantic_mql/: util.py
pydantic-mql/pydantic_mql/tests/: test_eval.py  test_util.py
pydantic_mql/: __init__.py  condition.py  operator.py  util.py
pydantic_mql/eval/: operator.py
pydantic_mql/tests/: test_eval.py  test_util.py
pygo-jwt/: .gitignore  MANIFEST.in  Makefile  Pipfile  config.json  manifest.in  pyproject.toml  readme.md  setup.py  test.py  wheel.toml
pygo-jwt/docs/: todo.md
pygo-jwt/pygo_jwt/: __init__.py  b64_util.py  errors.py  jwt_util.py  wrapper.py  wrapper_util.py
pygo-jwt/pygo_jwt/go/: Makefile  core_test.go  go.mod  main_example.go  wrapper.go  wrapper_util.go  wrapper_util.h
pygo-jwt/pygo_jwt/go/core/: conversions.go  misc.go  private_factory.go  public_factory.go  sign_verify.go
pygo-jwt/pygo_jwt/go/util/: b64_util.go  hash_util.go  json_util.go
pygo-jwt/pygo_tools_lib/: __init__.py  wrapper_util.py
pygo-jwt/scripts/: install-asdf-go.sh  patch-linux-wheel.py  patch-macos-wheel.py
pygo-jwt/tests/: create-keys.py  test-handle-panic.py  test-pygo-jwt.py  test-pyjwt.py  util.py
pygo-jwt/wheelhouse/: Dockerfile  docker-build.sh  test.py
pygo-tools/: LICENSE  Makefile  Pipfile  pyproject.toml  readme.md  setup.py
pygo-tools-example/: Dockerfile  MANIFEST.in
pygo-tools-example-v2/: pyproject.toml  test.py
pygo-tools-example/example/: wrapper.py
pygo-tools-v2/: pyproject.toml
pygo-tools/docs/: changelog.md  notes.md  readme.md  todo.md
pygo-tools/pygo_tools/: __init__.py  backend.py  backend_v2.py  build_ffi.py  config.py  setup.py  setup_v2.py  util.py
pygo-tools/pygo_tools/util/: __init__.py  monkey_patch.py  pathlib_util.py  wrapper_util.py
setup-util/: setup.py
setup-util/setup_util/: build_ffi.py  build_ffi_temp.py  config.py
