[build-system]
requires = ["pygo-tools"]

[tool.cibuildwheel]
before-all = "uname -a"

[tool.cibuildwheel.linux]
before-build = [
    "yum install -y make",
    "git clone https://github.com/asdf-vm/asdf.git ~/.asdf --branch v0.14.0",
    "echo -e '. ~/.asdf/asdf.sh' >> ~/.bashrc",
    ". ~/.bashrc",
    "asdf plugin-add golang",
    "asdf install golang 1.21.5",
    "asdf global golang 1.21.5"
]

# cibuildwheel --platform linux --arch x86_64